--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ jobs:
         - git clone https://github.com/pkgcore/pkgdist.git
         - cp -R pkgdist/requirements/* requirements/
       script: ./pkgdist/build-dist-files.sh
+      after_success:
 
     # push tarball to github
     - stage: deploy
@@ -58,6 +59,7 @@ jobs:
         - cp -R pkgdist/requirements/* requirements/
         - pip install -r requirements/docs.txt
       script: python setup.py sdist
+      after_success:
       deploy:
         provider: releases
         api_key:
