--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
 before_script:
   - git clone https://github.com/pkgcore/pkgdist.git
   - cp -R pkgdist/requirements/* requirements/
-  - pip install -r requirements/ci.txt
+  - requirements/pip.sh -rrequirements/ci.txt
 script: tox -e travis
 after_success:
   # upload coverage data
@@ -48,7 +48,7 @@ jobs:
       before_script:
         - git clone https://github.com/pkgcore/pkgdist.git
         - cp -R pkgdist/requirements/* requirements/
-      script: ./pkgdist/build-dist-files.sh
+      script: pkgdist/build-dist-files.sh
       after_success:
 
     # push tarball to github
@@ -57,7 +57,7 @@ jobs:
       before_script:
         - git clone https://github.com/pkgcore/pkgdist.git
         - cp -R pkgdist/requirements/* requirements/
-        - pip install -r requirements/docs.txt
+        - pip install -r requirements/sdist.txt
       script: python setup.py sdist
       after_success:
       deploy:
