travis-ci: allow api and cron triggered builds to run deploy stage as well
Mostly for more automated revdep testing between projects since
travis-ci doesn't support inter-project deps yet. Note that nothing
should actually be deployed from any of these builds since they all
should be non-tag builds.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ after_success:
 stages:
   - test
   - name: deploy
-    if: (branch = travis-ci AND type = push) OR (branch = master AND type IN (push, api) AND tag IS present)
+    if: (type IN (api, cron)) OR (branch = travis-ci AND type = push) OR (branch = master AND type IN (push, api) AND tag IS present)
 
 jobs:
   include:
