tox: update coverage parallel option to use -p instead of --parallel

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ install_command = "{toxinidir}"/requirements/pip.sh {packages}
 deps =
 	-rrequirements/tox.txt
 commands =
-	coverage run --parallel -m pytest {posargs:-v} "{envsitepackagesdir}"/snakeoil
+	coverage run -p -m pytest {posargs:-v} "{envsitepackagesdir}"/snakeoil
 
 # generate coverage report
 [testenv:coverage-report]
