--- a/tox.ini
+++ b/tox.ini
@@ -36,4 +36,4 @@ commands =
 # stub for travis-ci
 [testenv:travis]
 commands =
-	coverage run --parallel -m pytest {posargs:-v} "{envsitepackagesdir}"/snakeoil
+	coverage run -p -m pytest {posargs:-v} "{envsitepackagesdir}"/snakeoil
