tox: coverage-report: generate html files and ignore errors

--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,10 @@ commands =
 [testenv:coverage-report]
 skip_install = true
 deps = coverage
+ignore_errors = true
 commands =
 	coverage combine
+	coverage html
 	coverage report
 
 # build docs
@@ -27,11 +29,11 @@ commands =
 [testenv:dist]
 skip_install = true
 deps =
-    -rrequirements/docs.txt
-    -rrequirements/wheel.txt
+	-rrequirements/docs.txt
+	-rrequirements/wheel.txt
 commands =
-    python setup.py sdist
-    python setup.py bdist_wheel
+	python setup.py sdist
+	python setup.py bdist_wheel
 
 # stub for travis-ci
 [testenv:travis]
