--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ install_command = "{toxinidir}"/requirements/pip.sh {packages}
 deps =
 	-rrequirements/tox.txt
 commands =
-	coverage run -p -m pytest {posargs:-v} "{envsitepackagesdir}"/snakeoil
+	coverage run -p -m pytest {posargs:-v} "{toxinidir}"/test
 
 # generate coverage report
 [testenv:coverage-report]
@@ -38,4 +38,4 @@ commands =
 # stub for travis-ci
 [testenv:travis]
 commands =
-	coverage run -p -m pytest {posargs:-v} "{envsitepackagesdir}"/snakeoil
+	coverage run -p -m pytest {posargs:-v} "{toxinidir}"/test
