--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,5 @@ recursive-include doc *
 recursive-include include/snakeoil *.h
 recursive-include src *.[ch]
 recursive-include src/snakeoil *.pyx *.c
+recursive-include tests *
 global-exclude *.pyc *.pyo __pycache__
