--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,12 @@ python:
   - 3.5
   - 3.6
   - 3.7-dev
+  - 3.8-dev
 matrix:
   fast_finish: true
   allow_failures:
   - python: 3.7-dev
+  - python: 3.8-dev
 cache:
   pip: true
   directories:
