--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py34, py35, py36, coverage-report
+envlist = py34, py35, py36, py37, coverage-report
 [testenv]
 install_command = "{toxinidir}"/requirements/pip.sh {packages}
 deps =
