--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
-group: travis_latest
 language: python
-python:
-  - 3.4
-  - 3.5
-  - 3.6
-  - 3.7-dev
-  - 3.8-dev
 matrix:
+  include:
+    - python: 3.4
+    - python: 3.5
+    - python: 3.6
+    - python: 3.7
+      dist: xenial
+      sudo: true
+    - python: 3.8-dev
+      dist: xenial
+      sudo: true
   fast_finish: true
   allow_failures:
   - python: 3.8-dev
