tox: force latest virtualenv/pip

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist = py36, py37, coverage-report
 [testenv]
+# force latest virtualenv/pip
+download = true
 install_command = "{toxinidir}"/requirements/pip.sh {packages}
 deps =
 	-rrequirements/tox.txt
