--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,10 @@ cache:
   - $HOME/downloads
 
 install:
-- pip install -U pip
+- pip install -U pip tox codecov
 before_script:
 - git clone https://github.com/pkgcore/pkgdist.git
-- cp -R pkgdist/requirements/* requirements/
-- requirements/pip.sh -rrequirements/ci.txt
+- pkgdist/ci.sh
 script: tox -e travis
 after_success:
 # upload coverage data
@@ -43,7 +42,7 @@ jobs:
       - CIBW_TEST_COMMAND="py.test {project}/tests"
       before_script:
       - git clone https://github.com/pkgcore/pkgdist.git
-      - cp -R pkgdist/requirements/* requirements/
+      - pkgdist/ci.sh
       script: pkgdist/build-dist-files.sh
       after_success:
 
@@ -51,7 +50,7 @@ jobs:
     - stage: deploy
       before_script:
       - git clone https://github.com/pkgcore/pkgdist.git
-      - cp -R pkgdist/requirements/* requirements/
+      - pkgdist/ci.sh
       - pip install -r requirements/sdist.txt
       script: python setup.py sdist -v
       after_success: tar -ztf dist/*.tar.gz | sort
