--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include AUTHORS LICENSE *.py *.rst tox.ini .coveragerc
+include LICENSE *.py *.rst tox.ini .coveragerc
 recursive-include doc *
 recursive-include include/snakeoil *.h
 recursive-include src *.[ch]
