--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,23 +23,13 @@ jobs:
         git clone https://github.com/pkgcore/pkgdist.git
         cp -Rv pkgdist/requirements/* requirements/
 
-        # install deps required for building sdist/wheels
-        python -m pip install --upgrade pip
-        pip install -r requirements/dist.txt
-        pip install -r requirements/test.txt
-
-    - name: Test with pytest
-      run: python setup.py test
-
-    # TODO: use cibuildwheel action to build wheels
-    - name: Build release files
-      run: |
-        python setup.py sdist
-        python setup.py bdist_wheel
-
-        # output file info
-        tar -ztf dist/*.tar.gz | sort
-        sha512sum dist/*
+    - name: Build dist files
+      env:
+        CIBW_BUILD: "cp36-* cp37-* cp38-* cp39-*"
+        CIBW_BEFORE_BUILD: "pip install -r {project}/requirements/wheel.txt"
+        CIBW_BEFORE_TEST: "pip install -r {project}/requirements/test.txt"
+        CIBW_TEST_COMMAND: "py.test {project}/tests"
+      run: pkgdist/build-dist-files.sh
 
     - name: Upload files for tagged releases
       env:
