--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,10 +12,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Python 3.6
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: 3.6
+        python-version: 3.8
 
     - name: Install dependencies
       run: |
@@ -25,7 +25,7 @@ jobs:
 
     - name: Build dist files
       env:
-        CIBW_BUILD: "cp36-* cp37-* cp38-* cp39-*"
+        CIBW_BUILD: "cp38-* cp39-*"
         CIBW_BEFORE_BUILD: "pip install -r {project}/requirements/wheel.txt"
         CIBW_BEFORE_TEST: "pip install -r {project}/requirements/test.txt"
         CIBW_TEST_COMMAND: "py.test {project}/tests"
