--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -41,3 +41,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
         FOLDER: build/sphinx/html
+        SINGLE_COMMIT: true
