github: forcibly enable pytest colors

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,9 @@ jobs:
         pip install -r requirements/test.txt
 
     - name: Test with pytest
+      # forcibly enable pytest colors
+      env:
+        PY_COLORS: 1
       run: |
         coverage run -p setup.py test
 
