--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,10 +9,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
-      max-parallel: 4
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: ['3.8', '3.9']
+        experimental: [false]
+        include:
+          - python-version: '3.10.0-alpha - 3.10.0'
+            experimental: true
 
     steps:
     - name: Checkout code
