--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,6 @@
-include LICENSE *.py *.rst tox.ini .coveragerc
+include LICENSE *.py *.rst tox.ini pyproject.toml .coveragerc
 recursive-include doc *
 recursive-include include/snakeoil *.h
-recursive-include src *.[ch]
 recursive-include src/snakeoil *.pyx *.c
 recursive-include tests *
 global-exclude *.pyc *.pyo __pycache__
