tox: update deps for dist target

--- a/tox.ini
+++ b/tox.ini
@@ -19,9 +19,7 @@ commands =
 # build dist files
 [testenv:dist]
 skip_install = true
-deps =
-	-rrequirements/dev.txt
-	-rrequirements/docs.txt
+deps = -rrequirements/dist.txt
 commands =
 	python setup.py sdist
 	python setup.py bdist_wheel
