tox: simplify docs build target

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
 	-rrequirements/dev.txt
 	-rrequirements/docs.txt
 commands =
-	python setup.py build_man build_docs
+	python setup.py build_docs
 
 # build dist files
 [testenv:dist]
