--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,18 +19,31 @@ jobs:
 
     - name: Install dependencies
       run: |
+        # install deps required for building sdist/wheel
+        python -m pip install --upgrade pip
+        pip install -r requirements/dist.txt
+        pip install -r requirements/test.txt
+
+    - name: Test with pytest
+      # forcibly enable pytest colors
+      env:
+        PY_COLORS: 1
+      run: python setup.py test
+
+    - name: Build release files
+      env: CIBW_BUILD: "cp38-* cp39-*"
+      run: |
         # use release version of pyproject.toml
         cp requirements/pyproject.toml ./pyproject.toml
-        # pull in pkgdist
+        # build sdist
+        python setup.py sdist
+        # use pkgdist script to build wheels via cibuildwheel
         git clone https://github.com/pkgcore/pkgdist.git
-
-    - name: Build dist files
-      env:
-        CIBW_BUILD: "cp38-* cp39-*"
-        CIBW_BEFORE_BUILD: "pip install -r {project}/requirements/dist.txt"
-        CIBW_BEFORE_TEST: "pip install -r {project}/requirements/test.txt"
-        CIBW_TEST_COMMAND: "py.test {project}/tests"
-      run: pkgdist/build-dist-files.sh
+        pkgdist/build-wheels.sh
+        # output dist file info
+        ls dist/
+        tar -ztf dist/*.tar.gz | sort
+        sha512sum dist/*
 
     - name: Upload files for tagged releases
       env:
