--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,15 +12,12 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: ['3.8', '3.9']
         experimental: [false]
         include:
           - os: ubuntu-latest
             python-version: '3.10.0-alpha - 3.10.0'
-            experimental: true
-          - os: macos-latest
-            python-version: '3.8'
             experimental: true
 
     steps:
