--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,5 @@ build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-ra -q"
+addopts = "-ra"
 testpaths = ["tests"]
