--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,17 +39,17 @@ jobs:
         python setup.py build_py -i
 
     - name: Build wheels
-      uses: joerick/cibuildwheel@v1.10.0
+      uses: joerick/cibuildwheel@v2.0.1
       with:
         output-dir: dist
       env:
         CIBW_BUILD: cp38-* cp39-* cp310-*
-        CIBW_ARCHS_LINUX: x86_64 i686
-        CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
-        CIBW_MANYLINUX_I686_IMAGE: manylinux2014
+        CIBW_ARCHS_LINUX: x86_64
+        CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
         CIBW_BEFORE_BUILD: pip install -r {project}/requirements/dist.txt
         CIBW_BEFORE_TEST: pip install -r {project}/requirements/test.txt
-        CIBW_TEST_COMMAND: py.test {project}/tests
+        CIBW_ENVIRONMENT: PY_COLORS=1
+        CIBW_TEST_COMMAND: pytest -v {project}/tests
 
     - name: Output dist file info
       run: |
@@ -62,7 +62,7 @@ jobs:
         twine check dist/*
         wheel2json dist/*.whl
 
-    - name: Upload files for tagged releases
+    - name: Upload to PyPI
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
@@ -70,3 +70,10 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       run: |
         twine upload dist/*
+
+    - name: Create GitHub release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: dist/*.tar.gz
+        fail_on_unmatched_files: true
