--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ['3.8', '3.9']
+        python-version: ['3.8', '3.9', 'pypy-3.8']
         experimental: [false]
         include:
           - os: ubuntu-latest
