--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,12 +13,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ['3.8', '3.9', 'pypy-3.8']
+        python-version: ['3.8', '3.9', '3.10', 'pypy-3.8']
         experimental: [false]
-        include:
-          - os: ubuntu-latest
-            python-version: '3.10.0-alpha - 3.10.0'
-            experimental: true
 
     steps:
     - name: Checkout code
