--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,7 @@ jobs:
         os: [ubuntu-latest, macos-latest]
         python-version: ['3.8', '3.9', '3.10', 'pypy-3.8']
         experimental: [false]
+      fail-fast: false
 
     steps:
     - name: Checkout code
