--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,13 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', 'pypy-3.8']
+        python-version: ['3.8', '3.9', '3.10', 'pypy-3.8', 'pypy-3.9']
         experimental: [false]
+        include:
+          - os: ubuntu-latest
+            python-version: '3.10'
+            deps: minimal-deps
+            experimental: false
       fail-fast: false
 
     steps:
