--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,11 +39,11 @@ jobs:
         python setup.py build_py -i
 
     - name: Build wheels
-      uses: joerick/cibuildwheel@v2.0.1
+      uses: joerick/cibuildwheel@v2.8.1
       with:
         output-dir: dist
       env:
-        CIBW_BUILD: cp38-* cp39-* cp310-*
+        CIBW_BUILD: cp38-* cp39-* cp310-* cp311-* pp39-*
         CIBW_ARCHS_LINUX: x86_64
         CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
         CIBW_BEFORE_BUILD: pip install -r {project}/requirements/dist.txt
