--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,7 @@ jobs:
         pytest --cov --cov-report=term --cov-report=xml -v
 
     - name: Submit code coverage to codecov
+      if: ${{ matrix.os == 'ubuntu-latest' }}
       uses: codecov/codecov-action@v1
       with:
         file: ./coverage.xml
