--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest]
         python-version: ['3.8', '3.9', '3.10', 'pypy-3.8', 'pypy-3.9']
+        deps: [newest-deps]
         experimental: [false]
         include:
           - os: ubuntu-latest
