ci: enable py3.11 testing
Signed-off-by: Sam James <sam@gentoo.org>
Signed-off-by: Arthur Zamarin <arthurzam@gentoo.org>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,10 @@ jobs:
             python-version: '3.10'
             deps: minimal-deps
             experimental: false
+          - os: ubuntu-latest
+            python-version: '3.11.0-beta - 3.11'
+            deps: newest-deps
+            experimental: true
       fail-fast: false
 
     steps:
