--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,7 @@ jobs:
         CIBW_BUILD: cp38-* cp39-* cp310-* cp311-* pp39-*
         CIBW_ARCHS_LINUX: x86_64
         CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_24
+        CIBW_PRERELEASE_PYTHONS: True
         CIBW_BEFORE_BUILD: pip install -r {project}/requirements/dist.txt
         CIBW_BEFORE_TEST: pip install -r {project}/requirements/test.txt
         CIBW_ENVIRONMENT: PY_COLORS=1
