--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,13 +12,16 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
         python-version: ['3.8', '3.9', '3.10', 'pypy-3.8', 'pypy-3.9']
         experimental: [false]
         include:
           - os: ubuntu-latest
             python-version: '3.11.0-beta - 3.11'
             experimental: true
+          - os: macos-latest
+            python-version: '3.10'
+            experimental: false
       fail-fast: false
 
     steps:
