--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -16,18 +16,16 @@ jobs:
       with:
         python-version: '3.10'
         cache: 'pip'
-        cache-dependency-path: |
-          requirements/dev.txt
-          requirements/docs.txt
+        cache-dependency-path: pyproject.toml
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements/dev.txt -r requirements/docs.txt
+        pip install .[doc]
 
     - name: Build sphinx documentation
       run: |
-        python setup.py build_html
+        make html
         # notify github this isn't a jekyll site
         touch build/sphinx/html/.nojekyll
 
