--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,30 +17,26 @@ jobs:
       with:
         python-version: "3.10"
         cache: 'pip'
-        cache-dependency-path: |
-          requirements/dist.txt
-          requirements/test.txt
+        cache-dependency-path: pyproject.toml
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements/dist.txt -r requirements/test.txt
+        pip install build .[test]
 
     - name: Test with pytest
       env:
         PY_COLORS: 1 # forcibly enable pytest colors
-      run: python setup.py test
+      run: pytest
 
     - name: Build sdist
       run: |
         git clean -fxd
         # build sdist
-        python setup.py sdist
-        # run in-place build so wheel deps use release versions
-        python setup.py build_py -i
+        make sdist
 
     - name: Build wheel
-      run: python setup.py bdist_wheel
+      run: make wheel
 
     - name: Output dist file info
       run: |
