--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,21 +33,18 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
-        cache-dependency-path: |
-          requirements/test.txt
-          requirements/ci.txt
+        cache-dependency-path: pyproject.toml
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements/test.txt -r requirements/ci.txt
-        pip install .
+        pip install .[test]
 
     - name: Test with pytest
       env:
         PY_COLORS: 1 # forcibly enable pytest colors
       run: |
-        pytest --cov --cov-report=term --cov-report=xml -v
+        pytest --cov --cov-report=term --cov-report=xml
 
     - name: Submit code coverage to codecov
       if: ${{ matrix.os == 'ubuntu-latest' }}
