compression/_bzip2: add tests
Add tests for all modes used by compression._bzip2 to compress and
decompress data.

Signed-off-by: Arthur Zamarin <arthurzam@gentoo.org>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install .[test]
 
+    - name: Install non-python deps
+      if: ${{ matrix.os == 'ubuntu-latest' }}
+      run: |
+        sudo apt install lbzip2
+
     - name: Test with pytest
       env:
         PY_COLORS: 1 # forcibly enable pytest colors
