pyproject.toml: fix the wheel tag
When using ~=, it still thinks that py2 tag is correct. With using >=,
flit tags it as just py3.

Signed-off-by: Arthur Zamarin <arthurzam@gentoo.org>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "flit_core.buildapi"
 name = "snakeoil"
 description = "misc common functionality and useful optimizations"
 readme = "README.rst"
-requires-python = "~=3.8"
+requires-python = ">=3.8"
 authors = [
     {name = "Tim Harder", email = "radhermit@gmail.com"},
     {name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
