--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,12 +13,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.8', '3.9', '3.10', 'pypy-3.8', 'pypy-3.9']
+        python-version: ['3.9', '3.10', '3.11', 'pypy-3.8', 'pypy-3.9']
         experimental: [false]
         include:
-          - os: ubuntu-latest
-            python-version: '3.11.0-beta - 3.11'
-            experimental: true
+          # - os: ubuntu-latest
+          #   python-version: '3.11.0-beta - 3.11'
+          #   experimental: true
           - os: macos-latest
             python-version: '3.10'
             experimental: false
