--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,7 @@
 [run]
 source = snakeoil
 branch = True
-omit = src/*, tests/*
+omit = src/*, tests/*, src/snakeoil/dist/*
 
 [paths]
 source = **/site-packages/snakeoil
