--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,9 +16,9 @@ jobs:
         python-version: ['3.9', '3.10', '3.11', 'pypy-3.9']
         experimental: [false]
         include:
-          # - os: ubuntu-latest
-          #   python-version: '3.11.0-beta - 3.11'
-          #   experimental: true
+          - os: ubuntu-latest
+            python-version: '3.12-dev'
+            experimental: true
           - os: macos-latest
             python-version: '3.10'
             experimental: false
