--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,14 +13,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.9', '3.10', '3.11', 'pypy-3.9']
+        python-version: ['3.10', '3.11', 'pypy-3.9']
         experimental: [false]
         include:
           - os: ubuntu-latest
             python-version: '3.12-dev'
             experimental: true
           - os: macos-latest
-            python-version: '3.10'
+            python-version: '3.11'
             experimental: false
       fail-fast: false
 
