--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .[test]
+        pip install ".[test]" pytest-github-actions-annotate-failures
 
     - name: Install non-python deps
       if: ${{ matrix.os == 'ubuntu-latest' }}
