--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,11 +13,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.10', '3.11']
+        python-version: ['3.10', '3.11', '3.12']
         experimental: [false]
         include:
           - os: ubuntu-latest
-            python-version: '3.12-dev'
+            python-version: '3.13-dev'
             experimental: true
           - os: macos-latest
             python-version: '3.11'
