--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py310, py311, pypy3
+envlist = py310, py311, py312, pypy3
 [testenv]
 # force latest virtualenv/pip
 download = true
