update python version in various places
Signed-off-by: Arthur Zamarin <arthurzam@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,21 @@
 [tox]
 envlist = py310, py311, py312, pypy3
+skip_missing_interpreters = True
+isolated_build = True
+
 [testenv]
 # force latest virtualenv/pip
 download = true
-deps = -rrequirements/tox.txt
+extras =
+	test
 commands =
-	pytest --cov {posargs:-v}
+	pytest {posargs}
 
 # build docs
 [testenv:docs]
 skip_install = true
-deps =
-	-rrequirements/dev.txt
-	-rrequirements/docs.txt
+extras =
+	doc
 commands =
-	python setup.py build_docs
-
-# build dist files
-[testenv:dist]
-skip_install = true
-deps = -rrequirements/dist.txt
-commands =
-	python setup.py sdist
-	python setup.py bdist_wheel
+	make man
+	make html
