authors: Add myself to the list.
While I'm at it, I pulled the current *rough* breakdown
of who owns what copyright; per the other commits in
the pkgcore ecosystem, this is primarily to ensure folks
get called out, and to also give a touchpoint should there
ever again need to be a license change (which requires all
owners to sign off on it, something that was done for gpl2 -> bsd).

Current list:
```
ferringb@frith ~/gentoo/snakeoil $ git ls-files | xargs -n1 git blame -ew | cut -d\< -f2 | cut -d@ -f1 | sort -g | uniq -c | sort -gr
  10393 ferringb
   8536 radhermit
   1409 arthurzam
    171 sam
    114 mgorny
     73 vapier
     21 marien.zwart
```
Vapier/Spanky was pylint changes, sam/mgorny can add themselves when they
feel appropriate.

Marienz actually created the formatter classes and had involvement in tests,
although I can't state how much is there but my recollection is outside of formatters,
nothing but one off bug fixes.  For better or worse, snakeoil was my creation and
ownership of some of that metaprogramming crazyness in use.

If there was anyone overlooked (due to VCS historical issues) or neglected,
apologies in advance.  Per other commits, >15 years, etc, etc, etc.

Signed-off-by: Brian Harring <ferringb@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ name = "snakeoil"
 description = "misc common functionality and useful optimizations"
 readme = "README.rst"
 requires-python = "~=3.10"
+# alphabetical by surname
 authors = [
-    {name = "Tim Harder", email = "radhermit@gmail.com"},
-    {name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
+	{name = "Tim Harder", email = "radhermit@gmail.com"},
+	{name = "Brian Harring", email = "ferringb@gmail.com"},
+	{name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
 ]
 maintainers = [
     {name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
