--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py310, py311, py312, pypy3
+envlist = py311, py312, py313, py314, pypy3
 skip_missing_interpreters = True
 isolated_build = True
 
