--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,12 +13,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.11', '3.12', '3.13', 'pypy3.11']
+        python-version: ['3.11', '3.12', '3.13', '3.14', 'pypy3.11']
         experimental: [false]
         include:
-          - os: ubuntu-latest
-            python-version: '3.14-dev'
-            experimental: true
+          # - os: ubuntu-latest
+          #   python-version: '3.14-dev'
+          #   experimental: true
           - os: macos-latest
             python-version: '3.12'
             experimental: false
