--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,11 +23,12 @@ jobs:
       shell: python
       run: |
         import re, tomllib
-        deps = tomllib.load(open('pyproject.toml', 'rb'))['build-system']['requires']
+        manifest = tomllib.load(open('pyproject.toml', 'rb'))
+        deps = manifest['build-system']['requires']
+        deps.extend(manifest['project']['dependencies'])
         if rejects := list(filter(re.compile(r'@[^+]+').search, deps)):
           rejects = "  \n".join(sorted(rejects))
           raise Exception(f'VCS dependencies were detected in [build-system]:\n  {rejects}')
-
 
     - name: Set up Python 3.13
       uses: actions/setup-python@v5
