feat: drop lazy-object-proxy dep
Snakeoil DelayedInstantion is a superset of that in regards
to lieing to the python environment (making it a full thunk-
hiding it's even there).  Snakeoil isn't as fast on the
implementation, but that's irrelevant for things like lazy-loading
subcmds which was the usage.

Signed-off-by: Brian Harring <ferringb@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,7 @@ classifiers = [
 ]
 dynamic = ["version"]
 
-dependencies = [
-    "lazy-object-proxy",
-]
+dependencies = []
 
 [project.optional-dependencies]
 test = [
