--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,12 +81,13 @@ jobs:
         echo "latest=${latest}"
         [ -z "$latest" ] && { echo "failed finding the tag"; exit 1; }
         echo "LATEST_TAG=$latest" >> $GITHUB_ENV
+
     - name: Checkout ${{ matrix.repo }} ${{ env.LATEST_TAG }}
       uses: actions/checkout@v4
       with:
         repository: pkgcore/${{ matrix.repo }}
         path: ${{ matrix.repo }}
-        ref: ${{ env.LATEST_TAG }}
+        ref: refs/tags/${{ env.LATEST_TAG }}
 
     - name: Set up Python 3.13
       uses: actions/setup-python@v5
