chore: add vulture configuration
Signed-off-by: Brian Harring <ferringb@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,3 +49,6 @@ exclude = [".github/", ".gitignore", "doc/api/"]
 minversion = "6.0"
 addopts = "-vv -ra -l"
 testpaths = ["tests"]
+
+[tool.vulture]
+paths = ["src/snakeoil/"]
