add vulture as a test dep
This is used to find dead code.

Signed-off-by: Brian Harring <ferringb@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ test = [
     # remove this once pytest >= 9.0 is the default.
     "pytest-subtests ~= 0.15.0",
     "sphinx",
+    "vulture >= 2.14"
 ]
 doc = ["sphinx"]
 
