add missing ruff configuration
This is the defaults used elsewhere in pkgcore, thus now the default
used in snakeoil.

Signed-off-by: Brian Harring <ferringb@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,5 +52,14 @@ minversion = "6.0"
 addopts = "-vv -ra -l"
 testpaths = ["tests"]
 
+[tool.ruff]
+target-version = "py311"
+
+[tool.ruff.lint]
+extend-select = ["I"]
+ignore = [
+	"E741",  # ambiguous variable name
+]
+
 [tool.vulture]
 paths = ["src/snakeoil/"]
